# pedalize

./: .gitignore  README.md
.github/workflows/: rust.yml
api/: Cargo.toml
api/client/: client.js  client.ts  tsconfig.json
api/db/: console.sql  datas.sql  schema.sql
api/src/: constants.rs  database.rs  declaration.rs  main.rs
api/src/clients/: mod.rs
api/src/product/: mod.rs
api/src/shopping_cart/: mod.rs
views/: cart.html  footer.html  index.html  navbar.html  product_list.html  product_page.html
views/css/: cart.css  footer.css  globals.css  index.css  navbar.css  product_list.css  product_page.css
views/js/: burger-menu.js  cart.js  global.js  list.js  product.js
