[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.107"

[dependencies.tokio]
version = "1.33.0"
features = ["full"]

[dependencies.serde]
version = "1.0.189"
features = ["default", "derive", "serde_derive", "std"]

[dependencies.sqlx]
version = "0.7.2"
features = ["default", "mysql", "uuid", "runtime-tokio-rustls"]

[dependencies.uuid]
version = "1.4.1"
features = ["serde", "rand", "fast-rng", "v4"]

[dependencies.axum]
version = "0.6.20"
features = ["default", "tracing", "tokio", "http1", "http2"]

[dependencies.tower-http]
version = "0.4.4"
features = ["cors", "tracing", "trace", "tokio", "default"]